--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,11 @@
 		<artifactId>poi-ooxml</artifactId>
 		<version>4.1.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.47</version>
+		</dependency>
 	</dependencies>
 </project>
